--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 				<div class="item-header">Languages</div>
 				<ul class="languages-list">
 					<li class="languages-item">Ukrainian - native</li>
-					<li class="languages-item">English - </li>
+					<li class="languages-item">English - A2</li>
 				</ul>
 				<div class="item-header">Location</div>
 				<p class="location">Ivano-Frankivsk, Ukraine</p>
