--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 		<div class="left-side">
 			<div class="about-me">
 				<div class="my-name">Andrii Korobkin</div>
-				<img class="my-photo" src="/img/2.jpg" alt="My Photo">
+				<img class="my-photo" src="./img/2.jpg" alt="My Photo">
 				<div class="item-header">Contacts</div>
 				<ul class="contacts-list">
 					<li class="contacts-item">
@@ -46,7 +46,7 @@
 			<div class="rs-item">
 				<div class="item-header">Summery</div>
 				<p class="item-text">
-					The ability to work in a team, I quickly learn new information, I want to study and learn new technologies for myself and achieve new successes in the developer profession.
+					Ьy position in life - if you do not progress, you degrade. I learn new information quickly, I want to study and learn new technologies for myself to achieve new successes and improve my skills as a developer. I also like working in a team, because it's allways a great experience.
 				</p>
 			</div>
 			<div class="rs-item">
@@ -59,6 +59,7 @@
 					<li class="skills-item">Gulp</li>
 					<li class="skills-item">WebPack</li>
 					<li class="skills-item">React.js</li>
+					<li class="skills-item">Fire Base</li>
 				</ul>
 			</div>
 			<div class="rs-item">
