--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 			<div class="rs-item">
 				<div class="item-header">Summery</div>
 				<p class="item-text">
-					Ьy position in life - if you do not progress, you degrade. I learn new information quickly, I want to study and learn new technologies for myself to achieve new successes and improve my skills as a developer. I also like working in a team, because it's allways a great experience.
+					My position in life - if you do not progress, you degrade. I learn new information quickly, I want to study and learn new technologies for myself to achieve new successes and improve my skills as a developer. I also like working in a team, because it's allways a great experience.
 				</p>
 			</div>
 			<div class="rs-item">
