--- a/index.html
+++ b/index.html
@@ -65,6 +65,7 @@
 			<div class="rs-item">
 				<div class="item-header">Experience</div>
 				<p class="item-text">Java Script Fundamental course at SoftServe academy - 2022</p>
+				<p class="item-text">Elex FrontEnd Boot Camp (JavaScript, React.js) - 2022</p>
 			</div>
 			<div class="rs-item">
 				<div class="item-header">Education</div>
