--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 			</div>
 			<div class="rs-item">
 				<div class="item-header">Education</div>
-				<p class="item-text">Specialist degree: Computer Systems and Networks - 2012 <br>National University of Oil and Gas, Ukraine
+				<p class="item-text">Specialist degree: Computer Systems and Networks - 2012 <br>Ivano-Frankivsk National University of Oil and Gas, Ukraine
 				</p>
 			</div>
 		</div>
